2013-08-03  Maxime Doyen

 Made 4.5.1 release.

 * change: lot of code warning fix with gcc -Wextra and cppcheck
 * change: source code preparation for gtk3 migration
 * wish  : #1163319	revert back date range 'Last Year'
 * wish  : #814472	update main wallet view while editing some accounts
 * wish  : #801970	add R keyboard shortcuts to reconcile/unreconcile
 * wish  : #703544	account selected in the main view should be used by default when launching a graph report
 * wish  : #559787	running balance column in the list of transactions
 * wish  : #331113	keep windows maximized 
 * bugfix: mainwindow, top spending was not refreshed after preferences change
 * bugfix: anonymize, bankname/number were not modified
 * bugfix: #1202507 moving a (sub)category resets its "income" (vs expense) status
 * bugfix: #1202503 after a move of a category the list was not refreshed
 * bugfix: #1197516	file COPYING out of date
 * bugfix: #1195859	expense Income Balance Total error in Tag Statistic Report
 * bugfix: #1173910	illegal xml character allowed in split category memo
 * bugfix: #1163749	positive/Minus button ignores decimal character
 * bugfix: #1163447	auto-affectations non modifiables
 * bugfix: #1156846	QIF Import with date format YY/MM/DD fails.
 * bugfix: #1151259	split transaction filter on category problem
 * bugfix: #1140903	Bank, Today and Future Don't Update After Adding Transaction
 * bugfix: #1138103	no error message when 2 bank accounts have the same name
 * bugfix: #1133105	more permissive QIF import
 * bugfix: #1103668	segfaults on file open on x64
 * bugfix: #1102896	pick a date in calendar only works once (rollback #730319)
 * bugfix: #1099944	some strings in the main window untranslated
 * bugfix: #1047103	win: (libofx) Importing QFX causes HomeBank to freeze

2013-07-16  Maxime Doyen

 Made 4.5.1 beta release.


2013-01-14  Maxime Doyen

 Made 4.5 release.

 * new   : main window, "where your money goes" report
 * new   : main window, anonymize feature